[project]
name = "langchain-tutorials"
version = "0.1.0"
description = ""
authors = [
    {name = "groovecoder",email = "luke@groovecoder.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain[openai] (>=0.3.21,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.2"
ipdb = "^0.13.13"

